--- a/views/form.html
+++ b/views/form.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <script src="./helper.js"></script>
     <title> My Form </title>
 </head>
 
@@ -14,13 +15,17 @@
     <form action="/tenant_info" method="POST">
         <fieldset>
             <label>Start Date</label>
-            <input type="text" id='start_date' name="start_date" required>
+            <input type="date" id='start_date' name="start_date" required>
             <br><br>
             <label>End Date</label>
-            <input type="text" id="end_date" name="end_date" required>
+            <input type="date" id="end_date" name="end_date" required>
             <br><br>
             <label>Frequency</label>
-            <input type="text" id="frequency" name="frequency" required>
+            <select name="frequency" required>
+                <option value="monthly">MONTHLY</option>
+                <option value="fortnightly">FORTNIGHTLY</option>
+                <option value="weekly">WEEKLY</option>
+            </select> 
             <br><br>
             <label>Weekly Rent</label>
             <input type="number" id="weekly_rent" name="weekly_rent" required>
@@ -28,7 +33,7 @@
             <label>Time Zone</label>
             <input type="time" id="time_zone" name="time_zone">
             <br><br>
-            <button type="submit" >Submit</button>
+            <input type="submit"  value="Submit"></input>
         </fieldset>
     </form>   
 </body>
